--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   wolt_modal_sheet: ^0.6.1
   sms_autofill: ^2.4.0
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   mockito:
