--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sms_autofill: ^2.4.0
   flutter_secure_storage: ^9.2.2
   readmore: ^3.0.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   mockito:
